--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,11 +31,12 @@ jobs:
         uses: docker://ghcr.io/asam-ev/project-guide-docker:4
         with:
           entrypoint: sh
-          args: antora/run-build.sh
+          args: antora/antora --stacktrace --fetch --clean site.yml
   
   deliverables:
     name: Create deliverables package
     runs-on: ubuntu-latest
+    needs: [setup,antora]
     steps:
       - name: Checkout interface
         uses: actions/checkout@v3
@@ -74,6 +75,7 @@ jobs:
   publish:
     name: Add deliverables to release
     runs-on: ubuntu-latest
+    needs: [deliverables]
     steps:
       - name: Add deliverables to release
         uses: irongut/EditRelease@v1.2.0
