--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,28 +45,38 @@ jobs:
         with:
           entrypoint: sh
           args: antora.sh
-
+          
+      - name: Create artifact
+        uses: actions/upload-artifact@v3
+        with: 
+          name: antora
+          path: antora/site
   
   deliverables:
     name: Create deliverables package
     runs-on: ubuntu-latest
     needs: [setup,antora]
     steps:
-#       - name: Checkout interface
-#         uses: actions/checkout@v3
-#         with:
-#           path: dist/open-simulation-interface
+      - name: Checkout interface
+        uses: actions/checkout@v3
+        with:
+          path: dist/open-simulation-interface
 
       - name: Checkout sensor model packaging
         uses: actions/checkout@v3
         with:
           repository: OpenSimulationInterface/osi-sensor-model-packaging
           path: dist/osi-sensor-model-packaging
+          
+      - name: Retrieve Antora artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: antora
 
       - name: Create README
         working-directory: dist
         run: |
-          echo ${{needs.setup.outputs.VERSION}}
+          echo ${{ needs.setup.outputs.VERSION }}
           echo "/**********************************************************************************
           ***  ASAM OSI       		                                                ***
           ***  Version : ${{ needs.setup.outputs.VERSION }}       	                                        ***
@@ -88,9 +98,9 @@ jobs:
           
       - name: test
         run: |
-          ls -la
+          ls
           cd dist
-          ls -la
+          ls
           
       - name: Create deliverables package
         uses: actions/upload-artifact@v3
